--- a/Password Manager/Password Manager.csproj
+++ b/Password Manager/Password Manager.csproj
@@ -36,7 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DataEncryption">
-      <HintPath>..\DataEncryption.dll</HintPath>
+      <HintPath>..\..\LAB 5 - WPF\Password Manager\DataEncryption.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
